<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_kilometers">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por litro</string>
    <string name="total_expense">Seu gasto total será de:</string>
    <string name="total_price">R$ 0</string>
    <string name="calculate">calcular</string>
    <string name="validation_field">Preencher todos os campos</string>
</resources>